[gd_scene load_steps=7 format=1]

[ext_resource path="res://game/splash/splash.gd" type="Script" id=1]
[ext_resource path="res://game/assets/splash.png" type="Texture" id=2]
[ext_resource path="res://game/assets/kenpixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/assets/intro.smp" type="Sample" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="SampleLibrary" id=2]

samples/intro = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[node name="splash" type="Node"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="text_1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 442.0
margin/right = 1024.0
margin/bottom = 492.0
custom_fonts/font = SubResource( 1 )
text = "HELLO"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text_2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 489.0
margin/right = 1024.0
margin/bottom = 539.0
custom_fonts/font = SubResource( 1 )
text = "HELLO"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="copyright" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 563.0
margin/right = 1025.0
margin/bottom = 611.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.411728, 0.49427, 0.871094, 1 )
text = "(C) 2017 HIDDEN INCOME - PRESS ANY KEY TO START"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text_1_effect" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="text_2_effect" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="sample_player" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[connection signal="tween_complete" from="text_1_effect" to="." method="_on_text_1_effect_tween_complete"]


